[tool.poetry]
name = "twitchAPI"
version = "2.3.2"
description = "A Python 3.7+ implementation of the Twitch Helix API, its Webhook and PubSub"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.26.0"
aiohttp = "^3.7.4"
python-dateutil = "^2.8.2"
websockets = "^9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
